remove plex from kustomization

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,44 +1,44 @@
-#ENC[AES256_GCM,data:RK7Tgzm6Lz1DKbZvXVwOZSn/v/CinXblJTIusb2vp8jYOwEy6c+4dBq1lrGCY532/b3cpgEG3debB6WelZ2zWPU=,iv:pnFHt1gV99MF58Pt6RkcQf7nYzzBBXVRbnVukQaPins=,tag:BHpXc3z1Iw6OFm2ce+ByJQ==,type:comment]
-#ENC[AES256_GCM,data:sVcAAOPpd3hrbs+ylL6fv4AsDODEM95/ZuQQu1WhYgpPFaMjuxqUlsqNUtw=,iv:JMdCiY2HfUo571JhDispOetA2SPELnla6r6UjLuzU1A=,tag:Tm9iKsziTlQQIk2CvUcYGw==,type:comment]
-VIP: ENC[AES256_GCM,data:ksDpvcDf8DvZb06Xug==,iv:tCS4buDuzqeItBM/LAaN8cN9K1NrdTMRM3qriM91g0o=,tag:Zjk87vcdD5gJt9n9S2Skig==,type:str]
-#ENC[AES256_GCM,data:ioYDfIElzrq0ECiucNrL3tTpF7pdjQIZjMuA,iv:6FFteP8oOCcb+AtZTtbH0BQhKHn+IwqJCkqbSHprJeQ=,tag:5npVEOZWnjFkbATFrkafuA==,type:comment]
-#ENC[AES256_GCM,data:NeFrsp3zZkJC9nAAkwqJmvIgHB3O4GaQqsN3PHQx+TrNsBh8TKwD9ArSnWkmZIqE7p+9arYdxprmnQK0y0TC5pyQLtQVbGfTGJ8GAKQL8GSRwJC57LdIh1k=,iv:J3LaPrQLaa+YhFeSI/LLehCiQ1I/xvm4MqDg+OI4G+0=,tag:yYZvqZLfyyKsno57YQDwiQ==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:HC3vxDnhdz1CDmRqC4w=,iv:gHtcOM1QFxRC/KrjEj4gbmyE6tsHJ1agpcp8mR/x2+c=,tag:UcQOzPlXeH6NTQqClUFEBQ==,type:str]
-#ENC[AES256_GCM,data:EQo6iIz/3qN6MZaz19niz9BuB72gD7OXuGQkMQJoxwgx5g==,iv:pK4lw/sluJT2Ch+7TkMmFab54lI3BdDf0UB5ETzHZWw=,tag:XU8ZpHAozgRcaDF4pk8q5g==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:1+oqJgbGPld6kpIqmA==,iv:Buyb4C+uSR5FOhtyvbrxegdq7tprQM0XednfhQbVvEs=,tag:p0pdaZapriPhoL9/wab1NQ==,type:str]
-#ENC[AES256_GCM,data:oYJ6WMZXC/Q8AW0Vt5i3c9U+CJzwsRFVCPh4PFJc0UGQQnsxikv/6SMemn8R8so=,iv:wo8Vw3c/Jkg7uE0MVpzW/L+PcY8PdLfZCYy7WUAA+ks=,tag:LjFRBycANH1uNjXO9RI5Aw==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:SqvnBwA8Vo7ZIiHJckwKtFFeXsA8znZlvNslJKytuA==,iv:P1H6w7X9H+b0Nn7VLo6cmy7O2EFhvXyNtRWucdwxBdw=,tag:YB1SveHzURpkDoM4FLcgkw==,type:str]
-#ENC[AES256_GCM,data:Ij82MuUlCipkznvugXrJvTERIZPNFtSgrtIA4+TDJPP+md4ekORxxiTH/VUM8oLlVJFan9rIEt/uZGvKMi2Qtsjxn75OHfCHUucSSeoTfrvj3Q==,iv:vQk3PjTx47UCGB7UGlwEDNOD+5+XGgRkGIy3el5TVdI=,tag:tDwkr2srrc22mFRXib37xw==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:IqBdT8ovTEAshdXOn3eG,iv:s4T1BBm7TPvLwGi0CGcKgzfAKE8nCFQPYN9Jvcsi4YU=,tag:4fbisfIZ+c+DZCVL0MgHjw==,type:str]
-#ENC[AES256_GCM,data:RqnvDNqLakRdoGdDKeZcCGIf1SxvnSOaL/a1XSyfVOzO,iv:QO/wbsRDh50Tl04Lz6NuKAP+3Um/lARneVBqCXCRlmY=,tag:JXg/wjCahB/hOiv3udiu+A==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:mhETgqiAIBGiVR1hJ57k,iv:5DvltNRXAK4Ftb8+BdM6NDmolLoyeV5l0LxBmVBTCzA=,tag:zDNDbck4zEG47YiOfIeOgw==,type:str]
-#ENC[AES256_GCM,data:QSR79MwNxwgAn36vrmgh7jqcuWpDCg8XnX13l/rp8fo7LzdtbLAOkumzvUHE9izeNZGU5UNKzAqyFkcswi1PAd4VjpEXcFiZkHNWyTXUHlQ=,iv:tcdKP3XrYZIH60stQlRDZDgLPRsdkLZTb0M1i04V5cA=,tag:9VP1mvdkGkIYy5/9sMHV/Q==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:VQ7rJWqQz0smuNxssq5B,iv:RXuT7eTY+Sy+Ef9aMSC+J22yaTpoLWLhuCF/E4/8gYw=,tag:ZhplChENVYuJt9eFxQTvRg==,type:str]
-#ENC[AES256_GCM,data:YmJIXXdoioeb/Oq/sawc1Fm9iEMyOnA5CYWDjWkzapvZOiEeTowKznmLYJqDbQXSVpKqUJPr+Y38DlFOzUaRLnjg+d9oGsg8XWMd1Bca51cZLuMMbwpr,iv:9foYBiOkRhDCO4LozGtadFwOGwgMGxgEhDpajB2HkhU=,tag:XOOqRr7S7uS8m9Ff3IkOeQ==,type:comment]
-#ENC[AES256_GCM,data:1Smnk10yBixWtJzdYeSOngnh8yUqwNTpFyeRwL7G0hXmM3TJxQyp4hIKNHJDD+MPj08a1qwwlKv9vqBH9fN1GW3zxoE17XZaodkenF0MQJwYa2VUQDs8t3SIXujEYWp0N3s3xEmxl2rb9p0q0rrTtavnXRzYHIupUzTmLA==,iv:hS5A8kjEzhUihRR0qn9Hx3D2yye+w7am4Tii2Doq7X4=,tag:JTHpxjrMvMsv+O1eVURmcQ==,type:comment]
-#ENC[AES256_GCM,data:lRqr6mnIt2ZtF0ZgxJUwZ/n7s32hK/5u2QF8QYSuIxPr1kfEybYBhiy/HEwrI419ME2KoLR9XIWk/oHyutK5nzzt7o3pS04wF4me86nvW3s=,iv:mvX/j7IJJv+DxiyV4HM9X4tntIrp5djAEPUPNopPHPI=,tag:sO6sWLV0awBq45MjQeZKPw==,type:comment]
-#ENC[AES256_GCM,data:LhRSxTYaaAsSBmib+zJ42FP56MY4S2bh/8vOl8xohJLGpsm/55eJ+Fnup7wqFoR0WgEGv20u,iv:YA6qWH7q/QL5TixRPD8ZjIFcOsB1uPzkj4ZuBcLyTLk=,tag:2ct0sEreED9QeKQ45wO1fw==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:sBNXv47NzJqWasGs,iv:2SOAZsMUZz8y+ukRFsA5Jbp8zB2Bopue0+5+4tyU50s=,tag:GZAlvoeh0oQZVGMy/vfIPA==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:T4mfpYA5mPdqxCcnFDHLTQ0=,iv:7LINPiZjHeCIgqv5xKTjagpzynkVmkCh0TCiaRwgDyo=,tag:zok5V7eZLyQ5RY03bGLPwQ==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:KY87NjVanI4iGwAI6WwTspAH0ucl3ZuUszWnCeKHUxo=,iv:sAR53FoL9AUPPB1MLJ3B5rpM1+zaj/r/F/HwsIT+r0E=,tag:SFXz4sIxdsfAcWnj8R9fVQ==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:im42JY7lLqBZp1/QbJqJVnfYcbi2STXqCOIs4EQJ/pkvwDxtFqZzNQ==,iv:jOULlOkshs0t94W/WEPymxi9ltc7SLKBmU87UZNWsKc=,tag:NA89zDoDU501V5OjX3w0cA==,type:str]
-#ENC[AES256_GCM,data:zJczK2yS9Jf/uJYYYAiDyMh1bnvizJMwrbkrYR/92o6fQhpD4asyjLiDEeWrnwHPPpwldg2WdXe+xUG9Z+nh2Q==,iv:+Y6y6bH3K5/JCUQf1TU9DWM6zIVlVEWYGdXQC14nzTY=,tag:yfmi7eU90hbC0i+5E5/XbQ==,type:comment]
-#ENC[AES256_GCM,data:zvlIgfXdWftXLjvGaL41nuKpwCiYKkgOQZolhDUp+rRoOHlRfvG6fpU87xzBSzRk97rdI0/wbPw=,iv:U34oOngl3PsmM9YNMcLmnqh/bYppFGbgm/popzRLHME=,tag:Jnb1M2reUy9yBgM9gfyvFA==,type:comment]
-#ENC[AES256_GCM,data:2k9JHhScuTkYJNuf/4AOBM5qcyEY+D+6Ow==,iv:f5TUA0lfw166VIJCpyfkmKmuImBZs12Vrn4+TlWz9+8=,tag:fsTVYY0pWbSJ/KM27ERRlA==,type:comment]
-#ENC[AES256_GCM,data:AZPfL+ZXFLadnqbxEcYeM2M/xkf1W5Yrwg9aIZ151/pOIvxdHVlqiloCFNCT/7v0nvkMEkdIJoGruVrMbY+ysvClnZZaqMuUWVG8MLQ=,iv:cBUMMaxlGoBspXnfoWaC1hLVU/CDUcmj6uIWLEVOsKQ=,tag:tOQWvlsB4ixjAKFgegmILA==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:SIj3TRYKy6biGqjluz29G+VOEaQDsvS06onr8ZO/QRFlHW1dEpyORNJTb+sVGN4v,iv:+lnotwGxBKnS0eSotYDJDGsqo1BlgXLh1iJUGnUhUU8=,tag:2WmtJVyrwLLhpKGYqfZhLw==,type:str]
-#ENC[AES256_GCM,data:JCcz5GifhMRAEpQ4TdlbW87gGgpecGyUYPuj6ePtDLNRhI+2v2TDOfBwGisyo4HhiVZhsbNucSGAxJsnQvFaO2IbIQ3C2p8=,iv:WwKeV7O4bQd7AxSvgg/Q1T/XuK7iquFhlnFRcrH/2WQ=,tag:nUcpUU7EHq3/NWLYHFKVBg==,type:comment]
-#ENC[AES256_GCM,data:CRuMPCWa5YR0orM0InnFXxryZam5fADDfT6uufzm8EBylW9K2bCXDpu7jVleQfBjksTcD5R4,iv:gDtWfT4EDh9GbBIoO+RJgCFcS7OtBtFqj6ffe58CBMs=,tag:P1FjXQajyy6kHQOUrFIbDw==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:qQ7n7cnlQQ==,iv:bd4OYDIvqcXbTXy8WrWubDahPdPMe6fmz4VhNDRAAOM=,tag:n2NndCpvm20lYAk97jUUwQ==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:X4440BGuCoeguW3DxIJXxsbs7ts=,iv:Rld3MEp5F8AQ1h2LwDDmBkTJrrjOeVliz1h8a2VK2to=,tag:Sh5jpMzeIsuapLIYHl7boQ==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:yf6eLk93b4i7kzQ=,iv:75YFSzrLNVubWdDbi0J9kzYFXiEvyErXEifVJCxX8xM=,tag:dEWdlQAK/RRSmaDwhvdDCg==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:CVcee5/LH7jJx/Ep8Oz9,iv:o2fbXBs6vO/FTtmcK2ZrK7gpuvVM1rmmmWXGaGSdzXM=,tag:AiveGGH/rbgvXwvpJkhcAQ==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:WsHLSUhBPic853IZhP+8WaIhTAgkgUTVjg==,iv:Rjqg+O46WEq4SfBDc7+SmVN1K7kxZHL3x6afnujfbl4=,tag:rVltDHbxfOnSJ4gEfm1zbQ==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:bOXbBmAyCmODXxWNoRJUKDgvjjpCgfH3,iv:cH4LfXbI5RhUSjWmNCDdc1tJhgbo/7AIItIzONseDvI=,tag:+KXFS2vzN89FdeABlU54Hw==,type:str]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:02wM2X/A4z9U+7M2Gcy7Vn7p,iv:LFs+Pyc88E2pvqM45+9Azydgq9L40OH0ivkoXeh98y4=,tag:+AEVl47uI5dnXz4+mOflzg==,type:str]
-#ENC[AES256_GCM,data:D/4m6HmvWBfEUE8NscQ=,iv:q2FXC/Jb9HOwruzbYiXMZ7c1pgrX/aOW8tiKem5LEAc=,tag:dX1fHFeuiKjTCRhMqB8EdA==,type:comment]
-PODNET: ENC[AES256_GCM,data:wg4TY7U69SU3laZdZA==,iv:israyajS6hHcukY6TAYpkiUPl5QWJa/cVZBaCTUSJds=,tag:2BYzswIbN7W2IbroaeHV0A==,type:str]
-SVCNET: ENC[AES256_GCM,data:DoU/xIilmBrQmnxBZw==,iv:rZ8eFMZ4IZx0HJNRAI2ykorAnw8To8rpQ47QKZCq+1k=,tag:c1cXaBvDjp3WRzRl0GKR6g==,type:str]
+#ENC[AES256_GCM,data:HSJDGT0MmusIEnkmNrjoLLo+POiRljmT52jNY5JbtN7b9jpz0phBL8K/eO3OY5YjX+/+bERXyGGk41isX9rznxo=,iv:Fp84Ih1d7Db3dke07NHW9L/xQBRsRPg8q0u2tKXCuoM=,tag:tR7p/7JbPhuybiXygo7TvA==,type:comment]
+#ENC[AES256_GCM,data:nFChhmKM6KEDBfP5AzO746BXYPWeBfWQFkQC2lf2Q/TgS9TbPaX/rGRa7Lo=,iv:pLIs6lNLpDeAE6Hh8cDui4sG86ZLvbEnsccb38gRKhM=,tag:sIVEewjVcoYD16g3xGm8Lg==,type:comment]
+VIP: ENC[AES256_GCM,data:KCNTC2Xa2Ll3sCrw2A==,iv:LN3B8lyUflr/XG8cGIa5pP9DmB/zGaPSqgehr+j5WEA=,tag:+TVIVguBGRR0+c7QqPyJ0w==,type:str]
+#ENC[AES256_GCM,data:16P3gqEcVzRVPnl0cYadyqGW0cEpQ3WSnJgA,iv:gA2+2FWNfShudQSb+yjz4ISGloTBrKsFMlQdMf2SGN0=,tag:VaNp8QHqn3OmGIsmXan2Mg==,type:comment]
+#ENC[AES256_GCM,data:bYXaOkKXlzvFxRMDH9u6FOExUyKlmM726Sq04Pt00Ov4ggq/KeyP48YrhhHpXUccCIgJeqxmwRwQdgwXC1fSROGjAccGixVQ0mdBDgxgeiBQ6kp3oiLQaMo=,iv:NZxykkYxEyqYG+w+KfRgTH01TTA1HfsIx6UgRG/BzRU=,tag:JYYUk8lwUSVrYDxV/vFmug==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:Paivv2oqlRziXH96Myo=,iv:1Vb1ONL+MoE7JnSSHrSttNS3hj2Zy60TM+Ot0JfAhzg=,tag:YAOjuEek/HNshZpub8EJYw==,type:str]
+#ENC[AES256_GCM,data:XWCSkcfLB8tqyQbs27w5cRpwcmo5JKHH439BSzVJLUgkpA==,iv:v0i0ne/yoOJCldhm15/O7DJyQvA9NqbakjWn3HMN0E0=,tag:jxmbqWHx6HSqMixGFTruMg==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:7+yaQkhHHeC+qRrqyg==,iv:u66rCiem5j4PPfZa2V1fNAvjxWdUnZRVmMHHtQFgrn8=,tag:PyqrnsndNP7Gr+IACwjMrw==,type:str]
+#ENC[AES256_GCM,data:kHNj/TBTrRd/a9gZA3zscDzOm4BGA+JLMqFKx/vRDOQZdp3JW9Po6hWrIIDICRg=,iv:8jxezANXj2/gXAZrXVPYiZwx1uBSkCPuHxp8u4FT7GY=,tag:N98qpQ05fW9hggtrvXhpCw==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:ulT4JzAzXR7fqSw/ZkHZv12X02/2ojMcucfUixMtKw==,iv:7Ogxulfma2mNrziQAc/xRErRij77+3h3DndGk1ORjv0=,tag:KvruCIXIAuatNp+3nBORcQ==,type:str]
+#ENC[AES256_GCM,data:gwY5IMd96CMU0N4PSev4ySpAIo4Q/paLPH3xgKXd2t/GZyeUW35j5ONTRJyW8oSVOqYP9/O9Js0VU+gxxGquir6MYBI4BijWYCQYKEr7n6aTMQ==,iv:NX/8anTiiqXhQeMnEYHNjIBygA3XQORyL6ZjzcAsp+8=,tag:B/6sFFDL8BWoQUaqYIfhBw==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:PgyVJevsgiunh3eUW9St,iv:K3MeJsRsiA5MtDLVh99v2cUXAzelkOcpxomyjq1XCkE=,tag:jGzvLuz9XE1dPYgWzZ1jRg==,type:str]
+#ENC[AES256_GCM,data:dClFpoJEx3rCLvhf2dM7cT+bQGGdky6sRbZiWpASnQqH,iv:V/dXnDf4grm1GsqDXo8vmvYbBIpeVT3ifct+koy58GA=,tag:q4JK2zV5Q1OV2EZfbSwDiA==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:Hsnjrh67Qba5P01+SJXH,iv:Kqz1NGh4QE5pcUclahe7yVKamEVVsTscNVdO/gfBh6w=,tag:JFdZTGt7fncR280ptZoMeA==,type:str]
+#ENC[AES256_GCM,data:LIdfHX9kBYyeiQab9ogg8vqJ7tQPczoOabAqK7a/sjZ/lVqcOvCaTaFIXvfFQnBfd/HhuinbXuwqVyJjiz+GSf3dhFuXpZMxr+3qNOewN4M=,iv:iElPC8ZkJXYYeFyNe3F4PLDBItbxW7jJMUoM8NZ8bN0=,tag:1r+jSMKpFMl9T7NR1Z9IAw==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:NpaxbvzGWTHFV2p8qV1+,iv:4ZMdUe73wIBzMeAYgP09tnX2I7nwEacL+l0ub8B9BkY=,tag:ZigCnemKbS7Ft8UAn8ZZGA==,type:str]
+#ENC[AES256_GCM,data:KRqLL4ZRDusK1Z1UYMPhBgYO/xgYmBHbyxV9d7ge18vnQL4qWgiHAJzoWPnX6nkuer2KdwaoRCMEImHqRUG3ogmI+kGmmtdbwl/tpGnkMlrV4xzU5TUt,iv:w+K+o1HwvRCCP9dOvlo4Bl2/Miw3xkj83UHO53VgY/o=,tag:mpQa3geCuBIGQ4fCvLfAhg==,type:comment]
+#ENC[AES256_GCM,data:99HnwOfdzWPX5e5lhbI8CaEOmDqe5ZOHnlsOI/cBhjHiNaJEq5PW3SEF+0c4m0AvzZsPxV5kLA0Dz73d5hbsAhgeiw/Owi+irYQcTo8zTi85KhChwXuhj763bnuFylUZ2QTmOwvY9wqtm3QuO0PCdcoTwzK+lhcohJRfsQ==,iv:OD/sUTd2oNTs05KNuJgUfG2L4+V+ZZrEfa1AF2/iiRY=,tag:6VCL3xuO1P8gEPWfXrF5wQ==,type:comment]
+#ENC[AES256_GCM,data:7BL7bt2rEk/ArxYLx9wOFhZWBeajFQxaw3n4NaxtLDgzIjOwFF+aGrfwKovNv/swVLHYDSqrOdVxrzPxS3RowiXcUZe1MJzDLLj8FDBJcc8=,iv:IdoETRF9+Z6W9atD1Q26399o1mQtob1iN/MrOxhVGn0=,tag:tYUhnbUe4KTbBk/11/NuHg==,type:comment]
+#ENC[AES256_GCM,data:ODEQeiSAUSbkSa6X/x71cZAYes/HjlnRDSui+g/MW5EhN/E3plMGjy9ZMTADd1a+JGYjQUcN,iv:t0OPg0hYYnczEhDUqNA/TPyvhoKhy5CxnqqU0hJhJ4k=,tag:+UYt03Ay7gabPlFCaI6XVA==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:Y8VgUhX+CQGM2CbX,iv:lE5XRVvr5111mGZLjRCinpZMOvonZm6+WcC6vcl+ql0=,tag:3H5CFe2v1NSc6RuTBvDnuA==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:BLYBJQyodhYfStlJUl/J4Ao=,iv:uVT5ulMqS43BzKn6sbGz1vy6/G0zi48GfceFwicLMwo=,tag:gSgIrRKca5AhawyCK7m2gw==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:RcKP7J+eUnW0ASz/wd/V/LPyzQYeikcukCYflqMJhY8=,iv:ssR4UAiJGdIR1KW05diUbe4YaWaySB0hcSD/yTxjZrI=,tag:rsxiS3pCY+PbAjUUQZ+Rrw==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:uRZ//Ed6c/ZUypcHfGlE5Y0fxwSB4ZwMf+lZw/5WQg6cAxvgfSiqWA==,iv:CLvtUmiyqZfF5A6hM4MBqDXPlCPKsp913CdX3gK0cac=,tag:W/lqhDqsdCkrWXc6G1BjGg==,type:str]
+#ENC[AES256_GCM,data:paA25ShC9+lkg5djGmgooY5cwn20PbFA8a+A1YHQ6L7GFz3F0VNWv6OXM/F+TQuJk941+q5ag3BvtqNHd1q9Kg==,iv:iPqyRt03LGDhzE/neRm+3Vs60ATq7yeXMATPrd03Rlk=,tag:j5wdi9Z5Eq/IgVKSUanpkw==,type:comment]
+#ENC[AES256_GCM,data:3LJEEh5GXKPuTmwKxA3FNVm3lfQLkDa0BeKldrGU54IXreRIJM32J7eRKAVXY5phdExpmjOHUyI=,iv:vW40dLP5ZmH6shevuOzNQAthNbJ7bfkxFYdeeCMjgvg=,tag:jXqrQvhan0Stgg4+rcouQg==,type:comment]
+#ENC[AES256_GCM,data:JpfNXkQZX8R13szpaYhJiFEGOzvS3s2glw==,iv:2p2zkLQK0M/cz9vR3KV0TJXKZGnF3HzPPC0quwgkvPE=,tag:20ZHSfjvKz1g1uSdLzu0rg==,type:comment]
+#ENC[AES256_GCM,data:Tlm4dLqh3du7JeQdbibhQzBpr4W3JCRZypWMAwQEv1pAxO5HxORKV/ifg6VlTh9dC0tpdUwDFpTpqRJAMomXTtf/3mVDjHEoJy0BJSo=,iv:qslpkB1t4qJNr26uUUeuT9g+Pd4SX6mWXdCEBBIrhXA=,tag:F1Pc87mZjsF/A4yE49BSxA==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:aOIKS2TgROScxh63Vb8U9tz9FcV+xVYBYQEQLbBgswg8OUPdPfJBUQXU0pDrlO8r,iv:QLa2l0CobcxAV/Z97qks+2aEZRikb0/kIBWF5SKCfr0=,tag:fmwJr3k8iJ7XAWI+hvxeCg==,type:str]
+#ENC[AES256_GCM,data:fb9z9nZlRtjFp8gg/5Bx7cQW2Ku4IyT7skJXT/ziFazyt4SfxsOLQjhX/LjnCmHOkGT6VQ8ci2c8eQ+0jICZ9DdqNqIZpnI=,iv:ZPOa22M3GjcvK2rm01KOhdK5QwjwTVOX8eaLqwouYhs=,tag:IWkaqFjKwTOdpXuGvYGCnQ==,type:comment]
+#ENC[AES256_GCM,data:DE4edpVt18aiLFeLUlDwvp9HYlxHomvdfv7pNebxkDInJIDc9PkzX4WDVaAH13qgNe8Tv+uw,iv:oB1PWFynJjq1Ey6nCgEFm4s5wy4IPBKADU1qeteJkNA=,tag:HstMz1EgFIEO+oO2YN4gBw==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:imqkVHVACg==,iv:88beso2eiDTdKcS+4XDgnN4thq3N2RAGwNjS9+LvFRo=,tag:oox2W2H48tVt+gvf5su9/g==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:xMM8nIySE8Yi6DTCi9J6+W2BrQ4=,iv:7aCymW9gIlzWqlID5UM6PtTVLl3wNpxhF7OCKgX+sqc=,tag:HsT6WlzN8Qzvu3DgMbXr1Q==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:4OzMl3iAT61FYzc=,iv:YZ74mYjDQSUgdP4cdQ3vHcQdlXs9npdIIL8vvQ1l2cA=,tag:K8O7cEr71fp+I8idQGZ4+g==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:UHp1O1lwD7VCkEsKOSgB,iv:W7tQDYDH2mJH87bdf2bNb6Mqpsg1azSyb131FMSnhH4=,tag:KrgEsHS7pG2F9Hc61pwz1Q==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:rPZ9G6qZQBhqE1YXvfW6KnlP/PcekbbmCQ==,iv:JiyTilzQ+VlcARMEfbpwiVZRGyFu4gU3RZ8m5QSCAmc=,tag:OwR0kYQVoIVoh2TnC36J4A==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:dy+CIeQ3y+HX9d5J3LVtV9AWXYk4Wh7P,iv:x4chnE5FLcDtau0FjKUMOyh0EcwmppgTeuYsU+k0Pp8=,tag:XL/RS+ozfnLVrCrLt7xtyw==,type:str]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:PBfeHykicwiG5Vrc41Bew/8K,iv:NCJZKSdxp8i42r64yTbBdtjfP05VtJu+S0z2Cgn1Qf0=,tag:RCfvSbPj+NUmD9vISlmphg==,type:str]
+#ENC[AES256_GCM,data:qe3sPqfIp3J5bCxEw6Q=,iv:CQY+r11+RMW7W9vqwo1YpWwJk3PFTnBexAqObB8inAE=,tag:xzUuFM+OnhOB/J+YLtX9uw==,type:comment]
+PODNET: ENC[AES256_GCM,data:VHqoMFicCWW8ehHAaA==,iv:bgv5g7YeDsR7NQ33y0AsyFyjgcI3aoEvs5n5QHJPIto=,tag:iMOqTO5aKSL4bKEsjwpRAQ==,type:str]
+SVCNET: ENC[AES256_GCM,data:nIxY924kQYxpQvRLug==,iv:GUhn1gVbWqtWB2GkQja97113/oXPazNHLPu98k9PKF8=,tag:+PQztryylOH+8xRx1kiwlQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -49,13 +49,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBGR0ZNZVdPdUNGVFlVVVdt
-            RmpQZEM0K1RVei8zTVkyaUZTYlI2NDVvcVI4CjlnWHFxcVhYL3JhY2RoWU9EYzVP
-            OERyZDY5d25rK3NWZ3Vqbm9OTHh1Y28KLS0tIEdBM1BtdkdpSzlPY29mN09iRlpm
-            UTNZeGVrRzdTSjRFZ3RmcFZYY3VHNGsKEyK+OzuoIV/Q9jCWfzwqdpXVmf1vkeCs
-            SsCxlYlvAXKIhDf2xuh1Q2uqghV347nPGH/b/hGdOHhw0H9UISvjtw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBXbHp0Sk90MU8xR1VrNTJI
+            SmE2SXRQMTU3NnUzOUY4dTA2dnBlZGdPQnp3Ckllb3NDOWR4Q2lFZVJiZmNUMVJq
+            Q0l3bWlOMFRzRTNIZGxsZ293RVJvSm8KLS0tIDBBYWROeWJhSDhkRytwc2hFSU81
+            T2xVZmZCblVUdWM4cCtjWUttbWJad0kKRytMc1ErnW5Lxqtj9M8lek5cSF+AHj9V
+            LSrfsgrzlO7OlMXnlrEbrXJlPRAB1pm8UnRAndsr1evXYO3eml6aYA==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-09T14:10:41Z"
-    mac: ENC[AES256_GCM,data:jaCVh6GHkeZVuMBTLr0yUYHcIgAcIqVJElICWKkOahz6K4l9vC/QhqLRawYUKjZw65gkYEcgWuMhVd/FSUSMT85w1OVhk0GyrNYGWNwKC7UMIyHhxUwK/UVB6U3W/PikgV5Nkg7WB7rcT1J3u11DeaZpqLxSVoCVzSnqNdkEa2I=,iv:BuLDjmWyKAaqq6p0ewyIDOEMMF84wpfp8ksHl8Uaj0g=,tag:6GU9jPfGfMnFACm8m2Bzeg==,type:str]
+    lastmodified: "2025-01-09T15:06:13Z"
+    mac: ENC[AES256_GCM,data:RDACBYaF3IMMlEgAxd7qwVCxWDbwkAcDr3yZ3NAOrUKOuWTbk464rcsF12iODGDq3j+/V3T8uq49TGH2Nato6kxxZuVvZhcdZZSAb8U6UEYy0cxD/RhyVqQb1ZlRRogHOKxHnTw8z4M9zqiUbbdUemIRIHXpE4XcwHaQ6wx+/yA=,iv:ZhtYSWE0GR1zpxZh4PutRifSTx9k8TRgvaOhMyav9G4=,tag:zBnTwIVKmhzWbeGwoKzNdA==,type:str]
     pgp: []
     version: 3.9.1
