--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,48 +4,48 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:6J2esDlYC3zbbk3V7DgxeRhrjlAb0t5dgjPg0sUvmoyqAFH2L4eCgVzEZECG3U1whF7qUULu7Alb1+R5wkBoQkk=,iv:skfMIbbpb0rGk4SOjL1LAYbIBWA5L0udIhOYjfOfP2k=,tag:FZGeFBLQbbDAUeH0b0fEtA==,type:comment]
-    #ENC[AES256_GCM,data:uIm4ey6FBBHiioTY6izVmwD1kEQHHqqI1W4gEmHSLfBgjNoXY6vPrpJOTdc=,iv:E+LrEKVXaqco7LhYmz7OChA1Tsce1L82VCs+8eg88y0=,tag:u0JNKsxpbuC2twDtzz8TWg==,type:comment]
-    VIP: ENC[AES256_GCM,data:tgfT066Q+BvQnpFC2Q==,iv:+6W7ifLgNIoiywE1tj632HgirRX5SSaLFMlXypCOE7o=,tag:5xIlu9BMIotqj+eHLEs/7A==,type:str]
-    #ENC[AES256_GCM,data:HC//mZtT/xMYEqv3EVMD0pCKF15rL2AoJG93,iv:V8TdtLWcqEchsbHgk9thdO9qjYqqfZvssTo/6oktQx8=,tag:BBPQEZamj06krt4yzN9dcQ==,type:comment]
-    #ENC[AES256_GCM,data:uNRhtDdragqe0QvD64SZQZAn7+U+pHYmt4Z3sBf2s7IE7vNQTRuoBL38cF5Xwklr6o2c0S+Lj797OAOPo/VEKe2P43HbMEBoq0QJHdj13S8DbrwXV0NKLIY=,iv:yhT5eTLBIQV84S6u6yBCDX/6cGeMKc8z/d92PjneuYA=,tag:21oBo/x6PW16W7GChIgwKw==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:StlzKg6cBT2VhuVAu5A=,iv:JEjMV8Kkilt6qr1lC0Vvrh4TFap+4p41KwUtekddrdA=,tag:584zDQesH2nTxGiz5uS3aA==,type:str]
-    #ENC[AES256_GCM,data:eoHEKK/ff1EofCUd/sspATNay6ILuH23XR+ZjkS6+Kuqfw==,iv:BE+DfD7FoaryivemlPFB8+73ULeSsj5TF+JFSdgTH04=,tag:vIOlp6VwjPn3zuNNjHUGhA==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:xAEosCdtEaaHguEjEA==,iv:UOEXwhiPm1Mfr3m7wCuK4o63NN35QobLsCXy7bXh7bk=,tag:c21bCyZu+nKZBM7MPl6r6w==,type:str]
-    #ENC[AES256_GCM,data:JjBcmCKLk/Ek3lcfyjjQRnmIjwz7Bw3JHXTG5cBYMPoG06rMq4MEtoWHiI4KaRw=,iv:745tzZh2VeDUr3K6YwoHHNZvpt5PLcIpR5LBNjZcLnI=,tag:MmmaIna7gHVS3zufKi68xg==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:S1k89EIrF9rzSrL381Y/GSab2tm0giBnKDRzt5tTug==,iv:VUGOYiIHdRflGEftZKXTcBt/0+MgjNcyae380rqtdWk=,tag:TR+ZUSm+goRDLUxBwfoFCw==,type:str]
-    #ENC[AES256_GCM,data:C9aXXAmZw47LDkrPTFluX6Psn9DctWxj19rpTlPOyKSldpdl0KzRPuyMWtodu90EpKm1nY71+LBEWRGTT/ass6qUOOa9z0OFATjeh7I+uif1Qg==,iv:uHHRdNvZVH2k/GpOnAHnpc/p52Cmw431QWgQhl+tFzE=,tag:P1MRTYhq/Ih91pzctPiY8w==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:BqAGTTJdJWUADJOc57mZ,iv:nEkOEObqXSi15OaW7WSUeWGYoXVe9R7/6UGvZ8cc1Fo=,tag:FFaGultMlTVZSv3K67P9aQ==,type:str]
-    #ENC[AES256_GCM,data:oPiLNw1o0uIsBghiFH2B0bnmoqyjWUKwRDxcfuoChvKZ,iv:rReE5Hfmh/qStCNvxbNI0WqG/hh2StoeRLoIWcSSyOI=,tag:cu2po9exdLjSExTWeimR6g==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:BTiovaljZHiGfx054KjG,iv:7dabd6nfx+AEHeCzY2Ntfj8WMItA6DbOfBgXyqV+Zxc=,tag:zOkJLrB+wqx+PLazHtdsCg==,type:str]
-    #ENC[AES256_GCM,data:M5MJ9Z1GO75o+RBIDqEgsLsaqA+duTttI5PYfv52wd033VW0kzvqYIsFmwj8mE/0ThFChmyGO0pUslvs6XOY6IbfHrbCAW6345AjmRORAOI=,iv:vTGZCc9/zcpG3KSDWEo91i6dSUp8ffSfbGCHszVhQ1c=,tag:B3FlKcxnIe1C2oQ2nXkUKQ==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:InUWuWYtuFdtdaoKQbpU,iv:/fXqcpHj1RZrLf8Fam++hl5JO2v4Nnw2nHaP1sjxxTU=,tag:aQcuS1glnYFeGuGqwEPaNg==,type:str]
-    #ENC[AES256_GCM,data:YlFu3SxVogHk921vJEn08MirWociNvu84V7yaSaEyj43yfCZMt4O8g5nC1jKIDaAmjfUaeBY9GX5sSUSyxrtSHO3tA06vyeQYPYd3J7a+5Wctc+cDrAH,iv:UTzYqv+mN7e4BajG25zgzqebMPWv9RLoWPLSPMusM6Y=,tag:/CjMWMm8RG1hLLN04TrIjA==,type:comment]
-    #ENC[AES256_GCM,data:Fr4ZuACr4XOD6MpZdzhLdXyH7R2bwvEov0OkC+MKP8SCGXgnU6x0vIoN8bO6zql71ja4trxjuQl7eIBxwZhBdg5nO/N4uU3kL5gS+hwq3EEEabei3FcXTGATVzTfkg+2yV9wHtbFuf8uFqFu/DJPh02HnN24DLGocI+uDg==,iv:oLW+prfpnL0TE8yYX/GEnSxLRcW4m4pE35mBMcm0L3E=,tag:78MNVAIpGjZhIls0U5GtMg==,type:comment]
-    #ENC[AES256_GCM,data:GjUyGpwuMvHOezHGR5n6kHVBOp4pf4TNsmdaVKOyJqMjhdFHkxKw2ERnUZIUWpF+xc2ehxRNLcs7mFwcINCUVQmhAH/dwMbfRcoArQ7BJro=,iv:jNXFNUCkfEmX2+CTnFFFFDXkLpbnjZhDiiHde7DEGgs=,tag:CSnFsyBrzuaaqkKBnSQohg==,type:comment]
-    #ENC[AES256_GCM,data:qchEXMMkfDFS55SOGYfaTjHqFjPb42n7IO/21l1hFMKfNfoXJ6ruYNi6HVChsrrky9S5Dta1,iv:hEBSUJl0cvt+VaNQ4v92dlXW33iyATGHY1oa0X1RQjs=,tag:LNrLqGC9442KIFN4HoR7Kg==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:hP1YLMzWztlHODUb,iv:nJTFU0WPEgbxoIek4cEqcelAVdVrzhb42g46ykMqAos=,tag:U7fXj6oy8OEwYpl6Mecjgg==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:MxWRf0KWv43fhGJwBJ+kN8k=,iv:8WHdjqGtxxuYBrA79J1nXfPmnNWQxcwoznEhi7FcNh0=,tag:d3RztkbPUHovf5UVBgeUwg==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:1z2IVI2O1k/1w7/n/7n/ILSnaiUQO5ANyDKRdS+LcXQ=,iv:wSEtg2y3fv1tIHM9sjoO2Y4UYwWWsBfplfLq5hSZQCw=,tag:VQnZ7JIfAU6aJhr512YtYQ==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:VHXgxm64JpeweupWFH53PDbvk58GO6lwtDdm8f/0QVzfQltemyhnQw==,iv:fzDDBYI8xAMNsQs8F6FDP+TbTQK8q/n56eVX+pD9Dz4=,tag:lVnPXIf7gNpHocHC6K7h6g==,type:str]
-    #ENC[AES256_GCM,data:vK0xOQgayeyTVbiqRAcMHnsJN6yahtb9LvnoakenJUv4BxzuxDRYfsCS8Fbnc588gOLTFJytiZtfspXDzShDNQ==,iv:Aq/mPApocRDOFmV2xeIYIlaCpy4X7c92h3dbMunhV14=,tag:H4sLwNN2Cqhh6wN+nXlmEw==,type:comment]
-    #ENC[AES256_GCM,data:OOc2RxyVL6wQsoKAkRwVBaTK2nMldVJW+8Fy4ezqwPsmny29J0fOaj065PBuGRn1+o0mC/9aN6U=,iv:3Sa/cTYmnjJTXL8jCw9CqJIi8qloggZeO9DQHJAkm+o=,tag:3xzayC6SCM7Z4Q3bl+kiBA==,type:comment]
-    #ENC[AES256_GCM,data:AvbzIdf0+e+NP9ztYWcVcmPpEEvFdq19fQ==,iv:4uelT4gl1p/IPpxGxXcDGcyZQF4SwXNcktoczOI3KOk=,tag:xzD6lod6S5GM8xA64c9Low==,type:comment]
-    #ENC[AES256_GCM,data:ZMPTyl63ewuSY5ZT4HRCUi21ZS5FLla2yb0gPSwNocGP/tAzzz5psn71fpnEXDYMU27k5rURMyGneUSQebiMW6MZ03G+ac506tyD4rY=,iv:e5bEgp1DlVO6hf4xJ1g7HOIB0tvR4PAoxwH7kxfsX04=,tag:aSR/CrGxKgsMWvq13KwUaw==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:WSSyet+/jbZIdR4fPNC+PODDCPoSaL36QjZSoZ7B4viRyA1bDbVvJGIQM10p+WRB,iv:F+UqYJ5QHXPMp8wbVN8wwDLIRgiQhFwafuqcJBu4V4Q=,tag:Ti3CZfq4Un6MZZ0l6JK7FA==,type:str]
-    #ENC[AES256_GCM,data:0SYhR/1Qf7pupGkpCvsSSVVCy0jhBNRHCt+qrCBQorNMk1vrDYEUETI4n++O40j47DT/af+OxuP8JshPc0x1O8d/Ux6Ngdw=,iv:AI/zlpF7a9RXR+F5ewPdEULPpOe1khcIKFT2xWh4Bso=,tag:IHlvGrkH/eIy2p6mDmV2Qw==,type:comment]
-    #ENC[AES256_GCM,data:/vmIpp51iiztul6oh/YYUQ8/dHzuKRAFbsA7Kf7BK0F0Zo10X2wBhJdgzVOfjSDqKvfkC+tt,iv:JHwBU4fb5uQBxg/+NGBsKnZLfyjj7Jo4pEAdn2Z7cSQ=,tag:6uwuGfMWVssABZcFG1kefg==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:p0ykYP234w==,iv:ZlGpBsScwbkd9jtDS8YhvDqK2nDHTiutgpAtsvbUY2c=,tag:YDkeDxtkg41eD3WQFJEFeA==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:mJ+1n55V5QbttW4fvgTqArutoG0=,iv:1pxinN080eeQy2olUJIHzfbPK/lmY3sfjjIvVoYlVBE=,tag:wvrUNgrHxVH9p/WFQQwKEw==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:Sc4XIg1MQ9xAvnc=,iv:UyyC6JsF/ZsgThLO5cbpFDQBCzdn5Rswwi00F0X4rXY=,tag:s68Lxy8gIwtQI+5IyiD3Ag==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:PQKc9a9UrKJxgsd/lo6J,iv:QjklYbv7EyXECQJ0xI7aCNexSzMXJ0p+hkAaQp8iX+k=,tag:bhrEcvn4ZNDc3CpDqenwuA==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:xSGWVRxZxVFtoYUBKJc3T91SpfEN0mu7Rw==,iv:q9x0vyFqQiuuZvLwjvAnFd5LqoVUYriQRWECcTD0Ygo=,tag:S1oOWktVdbIEWDBgOPNZsg==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:TWhtpbI/grkRcU2mkEqKix/T/D1vSedk,iv:iPajlzFNjLloPZG71/xGvwh9/atiAb+cQlOCqcGerng=,tag:K9u43/G3/d2hLsCEYZJ0Zg==,type:str]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:R0F9ra7SiPKOMfqscXpy4SAQ,iv:Rv0QqUOjquzBfj0c20vayksRf0AFaj03/YEuAUCKi8g=,tag:QMJnFPo8Zr0CIH0oX2Pnnw==,type:str]
-    #ENC[AES256_GCM,data:hKn+NG3MzWH6FLiHWxc=,iv:y+sl5wUnsUZjvXsex8orDMkB7vq6oQnycPbe+pZgHOI=,tag:vlrXYJBvxf0w2LZjOpJ0mg==,type:comment]
-    PODNET: ENC[AES256_GCM,data:OVVm9NQjgrF85dn76g==,iv:Kb2FTiFZNY5bguv+64ST2XCMCIVV5//x9Fvwqr0cgEo=,tag:w6XQF4wm5bMiDImR7gdohw==,type:str]
-    SVCNET: ENC[AES256_GCM,data:4oTMQTUbzbOA+PcoZg==,iv:vlas1c3R2b+ZiBjfX/8JNTRWe4E4JosG3qhB6E4PS/c=,tag:InG/2EKoXQvXxCApFZMgIw==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:RD+55A==,iv:LCigt/U4WODVNB/JxYWC9CWNVYsCGVo+qGCaH2C61Qg=,tag:jRc/HBVToiAuXPduw8rVog==,type:str]
+    #ENC[AES256_GCM,data:0OdEoNOubxr3X0/5VQZ+9qq6DWC9coMmt5f4zLFamBcCBJjSU+YlsRhcMzqKwJ1lEGqQkjrRcQGLlmXPJeJ85x8=,iv:7HA+PK7sTP+DeBVTyys5kzeObD1Ir6DX71TwxZXv2rc=,tag:WLMWU1BrYTXapuCV7LuLTg==,type:comment]
+    #ENC[AES256_GCM,data:zE8VaN/vSclxvG1b4cY6SkQ3/Pc+vovdFQqEAdk1d2uGL24ec2HP2glwFk4=,iv:qo8aPbAG5hea5tWKbl8cmtdie0SdoloWH/KfWPMF8jI=,tag:DDZfnG1hYQD9hUEhQ/3YgA==,type:comment]
+    VIP: ENC[AES256_GCM,data:aq0JWbx+/r6FVRLJtA==,iv:20YdJfnS3XLsNmYTCDEvsxBvRijuJ64zaJq5m1T1MKk=,tag:qNxWaNn2s71KTxHV5Y/qPA==,type:str]
+    #ENC[AES256_GCM,data:ve82dOaG8E7JUAQV18BTyTp26DfdB4/rm1XV,iv:rAZ2NVKyZmkOYWVrgXa27Wr70YiB4M01WjwyVPI03Vc=,tag:gMU/2+kiFu5GTxKQnoj9cQ==,type:comment]
+    #ENC[AES256_GCM,data:8I1K8BcT05yZpl9l/c4PFnSHR1o3+2BPHHXPSKl/Vw8MJejxV0hnp1xGQ/HImOZLLwgbaE6J1ID3VO0xrPpkBfMGvDCBRifsXe4uq6I5fMtFstoOe29JamM=,iv:JbEi6PTCJ+t0RpZ0GhoNheK9qTlONp6dEkjyR5AwWLQ=,tag:rplDvh128MOZLXLkZAi3qw==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:HBZexfeGBsE9l3eEsfY=,iv:QR9I8b7xpKQEp5KYgKb3h/vx8Tp2+aAw+kHwK6CBzaU=,tag:N93diU713Uv9dOz8qzqz/Q==,type:str]
+    #ENC[AES256_GCM,data:6bP7vgI8wrGRzkiD1jDnFJf7DNkztyGsZ65iaEDlUoZ9Rg==,iv:gcT/JEdqXgG4lfod2R9L8ZmKEjkpw6t1ypPW668tyh0=,tag:dAmRsabBDyRrJHR8bnRrpQ==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:qglmFPDty2rwDblMQQ==,iv:TotFgAqy8KASID4aG5Ga29cMOX9U9/u+XtoNLeE53b4=,tag:Fe/cpCqcVvZfsRbZEFCkCw==,type:str]
+    #ENC[AES256_GCM,data:1qvQzxUeTzny+91Q2Xl/3TfghLYutbSWaMVxyv6CC/VDruBv/rrvLdhNX0pCH7o=,iv:NBArnHMMqTAfYz0UdaGsxaS9UiSDUNAioUucXNMCKQw=,tag:SoFhRPNIAOCu6FoCJ4Tp9g==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:eSJFhKwy3xNhFQFVe/6F66YXxdMA17ZEMykcOTB0GA==,iv:cC+OoGeczQSBsBMD43SH7d0ErfRnrh5dLMzY5dC6Rjo=,tag:ea6Z9xRV9jojTtsLUOelyA==,type:str]
+    #ENC[AES256_GCM,data:14gSR/2Yd9UzWKA3TaMAfrXabHaheN0MGrtOUvNmQ2H+2mLvy/2HSe/TqWrTo/NOkhQJA9NSQOgRVEO6RYU0ib1ugkmdljiMM/CeMMXETKGP+Q==,iv:/co8Om69wGr7NmmFCFfFN1oxo5Wpbo1B6EqP7OoQU/c=,tag:i0ga9Vomzh5kpTd5F3Vr8A==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:T41LHUJNYdtQm9T9Aq+i,iv:98pnhOqZp4kCQLRmjj9TauQ+RCjluQYxLcXPXb1LsOo=,tag:8u0iMtdOdsX9z8Y/J7o1sw==,type:str]
+    #ENC[AES256_GCM,data:nMLDzHEQTI1SLlDe9JEOqPZmJGQZvFAKVFyYMa5aDrXi,iv:5fCJNwxEBOPW/P2CpJAbCNQ+ooK5k6U2c/2DkHO6bwk=,tag:5qAyDexhmuqTivorzOXG8A==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:Y2aCi3BrXzvae2CcRRKZ,iv:QP15UbapmZCV5MngS9N/luwMD41rtCqqHWf5+6CsJB8=,tag:8kF6lUdth7cZkqWsa7Mrrg==,type:str]
+    #ENC[AES256_GCM,data:RuXXcF7BsFKj7xFwhKZ2l1omh50FQMjG0R6jrgmGMd7FeoM4e8dLIZKSFVkFJ2QGcJzDVcvPgvuuqZLBLiCQr10G1UNUNsZvwT76VYcR2Fs=,iv:JTvMuiGUhRq8ds9NHE++mSCqmjj7K/r5xYJiAppXxos=,tag:mquqCt2Vid4g2xQKYgeZKQ==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:EZa1td7qvrjJvP2F1zdQ,iv:nd0ar42M3XbMOhzSjn3x+3tU5xJrt6eZTd/cWrpQ6E8=,tag:Pr0wOdq7QT+bFEMBsY52xA==,type:str]
+    #ENC[AES256_GCM,data:4uqsrGcA3dLzrfksd6jrvWLJfDbTV3vkI6nxISoHC5Ft1ONysWECQ8ikKzyITQ7ybOV/DFpcSnCSbFDclFX5wW5UKnzjjlei0fBknXJZDfBOoV7x930d,iv:sF32SDMcF5bmMtO3eGpjXXUX6tOYnMS6DohyJSjuAC8=,tag:aEYGoRdmeJPHl/4xatFrTw==,type:comment]
+    #ENC[AES256_GCM,data:kVqYYoDj9euFzokS+jiXX2aoslaTSN1bqh8anx0SDf4Sie1KRH74ct5AvgMmlOP4DZs8v/5stbS7zqJcZQgvlEX43qe5WgDwol/5gkewxdzBVZC6XL2RFuQ6IiKT+/GsStPNoW/Xq1O7ooSJWJ9CxspqmQFwbn1sfbslNg==,iv:VMnQ1Ibkamw3yQvoS37Mr1O1G2sbf0RD8UqIcSWkTLY=,tag:PlqUp4JiW/O7QFnuqr37fA==,type:comment]
+    #ENC[AES256_GCM,data:OlYawBUAq1j3bgj4NrQh6IDfWHz9XmiV7aybr7rof44KmpU8ek54GOpy96gdOT1fjy7t57GcqtGHsFxtoaV7RTDhsJWHfXoGyfWP7q+Bmow=,iv:hmclDb/UPX0TBjM2/Cjxiimz145EXc7hQFHp2EskxFo=,tag:9Yp8ARtnKuPbYQUJlBGo/Q==,type:comment]
+    #ENC[AES256_GCM,data:tk/HUcw35yeozjuKerzw2ru38OJ7j9d5dofWm+Z5S8hLaAbWuz/ptoW/MqaiH0A4ZGDlDqZB,iv:g2ZiNxHMKHqogyqxk/UhHwARitoyAIwuLX4Xlg3MJjw=,tag:6pQ8lxCSW1Gf4xoN68CY/A==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:kdkvxKsb3c7LThRw,iv:ezF8jLeOmgWCsXKAfG+Rv8cVCZ1bpOW41qSwCQP25sM=,tag:GGr7xgnv8ocDoVvREqKPgg==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:9WF+uoFTpd3PfiHS0Tqp4MQ=,iv:aqk5P0JDcHZmLkqIXGqgfqvuOv2YCADX/F2m/pZ0St4=,tag:0KrhdzohE4Yz/p5gmoy5gg==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:FFOO3/qIRApJyPsIL15sN54YxzIAJPVVX/xHytMoEAM=,iv:QLvrQUKwQ0hf12aTyr/xZ7fP81XNEX5JVeyCCmnfE90=,tag:SvvB4TonGLMHGvqdOuMVsw==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:JYvbthMc+U8hkWzJtb8jNRZ64pMEQ79agLbuMxH3KELyn5G8syYvMA==,iv:HCaWezbjuSIrS67SnyeTdjw4fVH8RtU1lx9DNOeRUCY=,tag:cVMDuUqan+DV8L7lXhRcSw==,type:str]
+    #ENC[AES256_GCM,data:rLlf8VZfgPXpSBTGph+OhotpsvvdHjNlSRijOZDfRmIFb60gH7iGDE1d2ce/SL4Jmc2pYAgYH9BF4LwIr1jFDg==,iv:3Otg1o6fL3CcPy02osWgXiyOesopnoGtQfTGdtqgIjg=,tag:SleRB9HG9YhSVdujCHAAXA==,type:comment]
+    #ENC[AES256_GCM,data:r4Q6YkV2ceQ/zxskpuVCqUFwaARMhpsEpEVtnxFv3bsyvKDUKljYhRxcrcLS6RmXutJ9STmH8LU=,iv:WEfX6yKUK1Qbit3T4KDoa3Lm8fAGitEe50geMqRLqQo=,tag:nnAtJJ+jn8qt7NR4/CXucw==,type:comment]
+    #ENC[AES256_GCM,data:XdRDsAy97lsSNM14zcU3lgnS3Hj4V6ZXMQ==,iv:u0hVi879zqo7Epy66xlBJzsz+wfg8u/zsoYIHRz03ms=,tag:7jN7m2TT8tCHLyFJUFCA1g==,type:comment]
+    #ENC[AES256_GCM,data:QQs5M2QsgOt81l/JDqQRnW7848Q2T6yQJT1QZPGgG8hmZrWxijbSFjreU7loli4s1PIsAF07s2kCcIVK1l9mlJtcSQrH6IS9UXTRqFE=,iv:YkPaEsmIgNaOKMfLrqOAnfIEmLWXw6k3yXG7Dj1Nsng=,tag:/ZVhyBMwMDyDhuuXyIjtDw==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:lMw9luBQMgvd33jXPbXUGAaeIS+8IS36Rm43Na29s6l8p8aJt0v9UDiVWhSk8rtB,iv:8GYugE1E+aV09M6Qf0MYttV7vbXFvCb55ffjyJtSamY=,tag:3ZLGNmoa4TmZv039+U5bDg==,type:str]
+    #ENC[AES256_GCM,data:qEtRZxUjeRn4VEqGyvYha1MKFJcQwH13jBJg1klLjdm47PbYU8gP8Cz1bKKnOq48ZCtFOodaipp2M8RFaqryvqibx0GB1Nw=,iv:oji8FJkKGzPCf+SNsJsM4PoFs7QTJTckAJnYueko98U=,tag:CGmOYIyz+5wcwqENQK4rIA==,type:comment]
+    #ENC[AES256_GCM,data:tIs4dN0eIxbI6JL7u0xjtZGm6ruWuz0wEjV7pskmY98cKBRd9trTWfPJt58VCLXaVc+ACP4H,iv:7oz2bXhGgwpXfpJmp687lxlaOK/eP4nkwPSOveERy70=,tag:RS85LcMBK9o9++fXjANX7A==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:B0RVI6B5vw==,iv:MDV5EyQFbvhhpHQ0XAo0G5Un0t6yHDSd1u4qTQPWQnI=,tag:nMjxWqno5snJlZbhLQsfYg==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:g1qoEjwFHPHkLqTiiBy8bIvlboc=,iv:okKBUx5oUBIyj95Lo7CuVa7xVATxtthUxH9qkC0gjds=,tag:diqhqvoNnP8XJnZD+2YN9g==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:xBTLGBp2JRa0Ti8=,iv:afczGrBi4RUdKcrRJjbhTYtM4MrhP0cTIjqsMPpfD1Y=,tag:sKPhE2D0Fn2oEM/9zBZ0cg==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:TRcJ3QqUu5DpqAZ/5qcZ,iv:P+CX7OHICCtTCfeTZkALZccshbCAyY387KRI+vRoC2E=,tag:334bZIqNqE/6laMHMI5/fQ==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:99XEFXnYMFZCm5tiFhHN+RrYkbuZKRzZGQ==,iv:3jCza+GSZuxeMTx+MUzcBBB4XD9TELQBxtp24YM2stg=,tag:tXsRYi3o6HG1HsoUW/AS6g==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:F7YFB5Lxp4b3t/aIFbZ0SSQEZv98Ad3R,iv:MhXMNTmDXziTb8qparNEL6DKjh3MNhMKjmZnCXSo5Iw=,tag:e/B0Pijp69AzAoB1oEU8BQ==,type:str]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:P1ApETkaDjg5RDvpYwdVU2D6,iv:7QFATs/m/cTpc0PZch0OU3oymtAyZLKXW5eKtp+mZCE=,tag:t3CsturcEO7Ryp95LJk2jQ==,type:str]
+    #ENC[AES256_GCM,data:yfHVtqTAx0zH/xvbqyM=,iv:enJmAHfI+fvHrBZ0rtIC4yg2lj16C98yUWMrW+t+Ayc=,tag:yJpb7JTALBXIKp1t4lyZ9g==,type:comment]
+    PODNET: ENC[AES256_GCM,data:Zt+yj2JJ906DnY8XcA==,iv:fWybdmTeG1tPnoJI/PLhdpPcWMg6ur6kHdvVv8bJXAU=,tag:Mb9zcXvKiA14EDDWAjP3XQ==,type:str]
+    SVCNET: ENC[AES256_GCM,data:8PVUqGKiOsL6ELJ82A==,iv:yZT19eUdcc6tRyc2HCCdS8BXjvVdXELxJypmq2HLLPE=,tag:CrlP7TzDY2Vxc1GThWq3aw==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:od40yg==,iv:q+usnZgTq/CPr8AzymGCj7KtLlh0KfrHDqDEYelNOQ0=,tag:LNQURNL7xGfeRD0V6DYAcw==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -56,14 +56,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBRRXVJV3pJSkcvOVN4SzRL
-            U3QyS0xrcm1rSmpiUG8vNmlseXNGVFpFYVhZCks0cGVPV0JQalZvUUpNZVZHdWFN
-            TWxzUEFmV2d6ODNabDhYUzgrTUVDSHcKLS0tIFFOSzJzbjIvUk5JQXB5WlQ3YVRm
-            aEpUNCtKajk2VVN4WnIwSGFkMmVjQnMK9EtTFX9jX075P+mzWTBQfq08dxc+MS3E
-            K16XnlHBZidkqr0UNU10VETOHljtgRyCbRqWNzkZjRxsoRxXK+p1MQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUK2RMajRqR2xjRXhWWHpo
+            UTRHQUNmZFhXcVF0aURnaEpwNmdySjJjaEJRCkppa0NleTRjbisxdytKQS9wTVo5
+            SDA3Si9MVjV6bGlOWU41KzlkQTdvMEkKLS0tIFhhVXYxaDJ1ekZ0bGswS09jejJT
+            UkJtYjFwUndKc3N2Z0JVM1pwbkZrNTQKHK/V5zOIeEM6G8RhcHaAXNpxUalgcc/N
+            fzfvv5Ultbo5Vsuvsxpe8nDCDvjoLaIuVsxrsVHuaTQXhUqHEXN24g==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-09T14:10:41Z"
-    mac: ENC[AES256_GCM,data:/rKdS+/HcBmFp38fFVFbTD3Q/WlE5/6d/TR4fqj5gYu+o12aibnuSAI7wHYouqEmVgcqfGlGYPejWtReV2b4Zu7eSGMSepq9m2JSrt4F0D7FFvs2BF4hq5YMXMVtOyVQyMaje2cnTGSTD7QT1caP6feJ3S6ftgJjKyPSWHxsNcA=,iv:6UjiIvN5LjIG81UEhTQqAcXpViElxjl1RBrckkcRVTI=,tag:zUH47E4/ZdPtdOaOQXmlTg==,type:str]
+    lastmodified: "2025-01-09T15:06:13Z"
+    mac: ENC[AES256_GCM,data:ew0XvCYdoHDnLn+NKzo63LwSUngenr/fRdvW24QCqwm63il/ivUICL1vxTRaLfTaR8pOTCnf6plj5r/EPSpqgT2/fBdhPXnpN8CYHL8LKU3OAbEX69d/fj0wm3hk1SHsZmxNqaCePj4Ga4W9ya+zvABYsknHwHSgq72KPQmuqhM=,iv:WoHHQTtNrqHnEBlzPfSUMZwPL8XSsooNdDe7U2CI0i4=,tag:zWxEz82YvnRuD6j+u4MMog==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.1
